fixed overlapping logo

--- a/resources/sass/_overrides.scss
+++ b/resources/sass/_overrides.scss
@@ -1,9 +1,9 @@
 .brand-link .brand-image-xs {
-    max-height: 60px;
+    //max-height: 60px;
 }
 
 .layout-fixed .brand-link {    
-    height: 85px;
+    /*height: 85px;*/
 }
 
 .navbar {
